--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -1,10 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "678d9981-bf9e-4ae8-b1d7-f42a03b5f8b2",
+   "cell_type": "markdown",
+   "id": "12e3c1ef",
    "metadata": {},
+   "source": [
+    "# Math Thesis "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3640b21",
+   "metadata": {},
+   "source": [
+    "## Basic Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "678d9981-bf9e-4ae8-b1d7-f42a03b5f8b2",
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -36,7 +56,7 @@
        "function( group ) ... end"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 1,
      "metadata": {
       "text/plain": ""
      },
@@ -48,7 +68,7 @@
        "<pc group of size 8 with 3 generators>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {
       "text/plain": ""
      },
@@ -60,7 +80,7 @@
        "2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {
       "text/plain": ""
      },
@@ -108,7 +128,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "3ec79f64-ea5a-4d0d-ae7b-bc23d4e5dd12",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -432,7 +456,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "597afcc0-eb92-46ae-8cfa-0b4e4fe881e1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -516,7 +544,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "89bffa8d-2671-46c6-b98e-65af9d969b35",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3106,7 +3138,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "d913df16-2ebe-43ed-8d60-ed50a9f95f6c",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3186,7 +3222,11 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "fb620810-a7b1-40f9-86d5-d4fc784d66bb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3217,7 +3257,11 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "10641b19-5d16-4c78-ab45-a834c9229587",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -3236,7 +3280,11 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "1567935b-39fb-414e-b817-c1b1fa5678d5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3270,7 +3318,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "3c220bc3-2b47-4905-9166-7e15cb90b11f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3320,7 +3372,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "ff4eb9bd-34af-4806-94cd-42c59472d5fa",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4259,7 +4315,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "63192df5-c8c2-42e5-b1d7-5c3ab4c4b22b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -4267,7 +4327,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "345202a5-89dd-4c01-bdf7-fb87cda1206d",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4324,7 +4388,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "3ed12796-5392-4f75-ab27-b2c9c508ec8e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4438,7 +4506,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "68090f6a-c433-40f8-b492-0558af15a341",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4516,7 +4588,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "775c0e53-c55f-4758-89e2-d4f1ad85673e",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -4621,7 +4697,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "ae0cdfe5-aee2-467c-8c96-103029bb0e3b",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4657,7 +4737,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "9925849e-7819-4c3a-912a-39467e2d346a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4680,7 +4764,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "3357d5c2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4703,7 +4791,11 @@
    "cell_type": "code",
    "execution_count": 113,
    "id": "9071b643",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -4737,7 +4829,11 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "de3bf4d1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4760,7 +4856,11 @@
    "cell_type": "code",
    "execution_count": 121,
    "id": "444f7966",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4810,7 +4910,11 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "d1f93294",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4833,7 +4937,11 @@
    "cell_type": "code",
    "execution_count": 150,
    "id": "90233485",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4856,7 +4964,11 @@
    "cell_type": "code",
    "execution_count": 165,
    "id": "97fbc1d0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4933,7 +5045,11 @@
    "cell_type": "code",
    "execution_count": 167,
    "id": "94990ce8",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4956,7 +5072,11 @@
    "cell_type": "code",
    "execution_count": 179,
    "id": "df39fa89",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -5004,7 +5124,11 @@
    "cell_type": "code",
    "execution_count": 182,
    "id": "9a9e6554",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5084,7 +5208,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e16d6084-3f62-4db4-a744-70d35d3898a5",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5107,7 +5235,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "639bbd06",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": [
     "cc := ConjugacyClassesSubgroups(pg1);"
@@ -5117,7 +5249,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f0d953dd",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": [
     "Filtered(cc, c -> Size(Representative(c))=360);"
@@ -5127,7 +5263,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f202000f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -5135,7 +5275,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "cf6d06d0-d861-42b6-8ccb-1a5e98895148",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5171,7 +5315,11 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "30cda156-4f80-437d-964b-67ff6aee07b0",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -5195,7 +5343,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "974b6a7c-280a-48e7-a645-90ea67ec9003",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5218,7 +5370,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "f7decc26-708a-4dd8-b0fa-032ee7d49dfc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5241,7 +5397,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "e255e11c-04d9-47d9-8772-dc30aca13370",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5277,7 +5437,11 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "f0c43cc2-b315-4b1b-a3ed-9fa4169ebd70",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5300,7 +5464,11 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "f41b832b-23c3-49db-b8ee-d47da257c804",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -5325,7 +5493,11 @@
    "cell_type": "code",
    "execution_count": 127,
    "id": "be523d60-c0b3-4c84-8ac5-ad2bcf0fda65",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5363,7 +5535,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ade8595-bec1-45e8-8391-066aae04622f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": [
     "pg2 := DirectProduct(pg1,CyclicGroup(2));\n",
@@ -5376,7 +5552,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "989761ec-8889-4c3e-9d32-f049ec91cd34",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": [
     "chi := numComm(pg2);\n",
@@ -5387,7 +5567,11 @@
    "cell_type": "code",
    "execution_count": 139,
    "id": "9b697f1f-5259-4def-9ded-c94d0b419e79",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5405,7 +5589,11 @@
    "cell_type": "code",
    "execution_count": 137,
    "id": "ad860785-37cc-4249-b989-429086f433ed",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -5481,7 +5669,11 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "8a494641-3884-46d9-9cf1-11f7288366af",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5504,7 +5696,11 @@
    "cell_type": "code",
    "execution_count": 119,
    "id": "ff41f70b-b1f1-41f6-b5a3-1f3cfcd66486",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -6317,7 +6513,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "dec63fdf-3058-4401-92d5-9ef24bec726f",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -6340,7 +6540,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5afe6f41-0645-4fa5-ab02-6efd91df2210",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -6595,7 +6799,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "72bc61a7-fcba-4417-a586-1d00e5a40186",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -6603,7 +6811,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "74f22138-e20a-4f9f-924e-f00625701ccc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [],
    "source": []
   }
@@ -6618,10 +6830,10 @@
    "codemirror_mode": "gap",
    "file_extension": ".g",
    "mimetype": "text/x-gap",
-   "name": "gap",
+   "name": "GAP 4",
    "nbconvert_exporter": "",
    "pygments_lexer": "gap",
-   "version": "4.13.0"
+   "version": "4.12.2"
   }
  },
  "nbformat": 4,
