--- a/manip.ipynb
+++ b/manip.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# iso =\"[ F1, F2, F3, F4, F5, F6, F7, F8, F9, F10 ] -> [ F10*F8*F7*F6*F4*F2, F9*F8*F3*F2, F9*F8*F6*F2*F1, F8*F6*F2, F10*F7*F6*F5*F2,   F10*F9*F7*F6, F8, F8*F6, F10*F8*F7*F6, F9*F7*F6 ]\"\n",
-    "iso = \"[ F1, F2, F3, F4, F5, F6, F7, F8, F9, F10 ] -> [ F10*F9*F7*F6*F4*F1, F9*F4, F6*F4*F2, F10*F9*F8*F5*F4, F9*F8*F7*F4*F3,   F10*F9*F7*F6, F8*F7, F8*F6, F10*F9*F7, F9*F7*F6 ]\""
+    "iso =\"[ F10*F8*F7*F6*F4*F2, F9*F8*F3*F2, F9*F8*F6*F2*F1, F8*F6*F2, F10*F7*F6*F5*F2,   F10*F9*F7*F6, F8, F8*F6, F10*F8*F7*F6, F9*F7*F6 ]\"\n",
+    "# iso = \"[ F1, F2, F3, F4, F5, F6, F7, F8, F9, F10 ] -> [ F10*F9*F7*F6*F4*F1, F9*F4, F6*F4*F2, F10*F9*F8*F5*F4, F9*F8*F7*F4*F3,   F10*F9*F7*F6, F8*F7, F8*F6, F10*F9*F7, F9*F7*F6 ]\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1,2,3,4,5,6,7,8,9,10->10*9*7*6*4*1,9*4,6*4*2,10*9*8*5*4,9*8*7*4*3,10*9*7*6,8*7,8*6,10*9*7,9*7*6\n",
-      "[['1', '2', '3', '4', '5', '6', '7', '8', '9', '10'], [['10', '9', '7', '6', '4', '1'], ['9', '4'], ['6', '4', '2'], ['10', '9', '8', '5', '4'], ['9', '8', '7', '4', '3'], ['10', '9', '7', '6'], ['8', '7'], ['8', '6'], ['10', '9', '7'], ['9', '7', '6']]]\n"
+      "10*8*7*6*4*2,9*8*3*2,9*8*6*2*1,8*6*2,10*7*6*5*2,10*9*7*6,8,8*6,10*8*7*6,9*7*6\n",
+      "['10*8*7*6*4*2', '9*8*3*2', '9*8*6*2*1', '8*6*2', '10*7*6*5*2', '10*9*7*6', '8', '8*6', '10*8*7*6', '9*7*6']\n"
      ]
     }
    ],
@@ -30,15 +30,15 @@
     "iso = iso.replace(']', \"\")\n",
     "iso = iso.replace('F', \"\")\n",
     "print(iso)\n",
-    "ls = iso.split(\"->\")\n",
-    "ls = [x.split(',') for x in ls]\n",
-    "ls[1] = [x.split('*') for x in ls[1]]\n",
+    "# ls = iso.split(\"->\")\n",
+    "ls = iso.split(',') \n",
+    "# ls[1] = ls[1].split('*') \n",
     "print(ls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "'0000000101'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "  '0101100000']]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        " [0, 1, 0, 1, 1, 0, 0, 0, 0, 0]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,35 +170,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "mat_np = np.array(mat)\n",
+    "mat_np = mat_np.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0, 1, 0, 1, 0, 0, 1, 0],\n",
-       "       [1, 1, 0, 1, 1, 1, 0, 0, 1, 1],\n",
-       "       [0, 0, 0, 1, 1, 0, 1, 1, 0, 0],\n",
-       "       [1, 0, 0, 0, 1, 1, 1, 0, 1, 1],\n",
-       "       [1, 0, 1, 0, 0, 1, 0, 1, 0, 1],\n",
-       "       [0, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
-       "       [1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+       "array([[24,  4, 11, 20, 16, 18, 10,  8, 14, 11],\n",
+       "       [49,  7, 22, 39, 30, 38, 19, 14, 30, 23],\n",
+       "       [36,  5, 14, 29, 24, 28, 14, 11, 22, 17],\n",
+       "       [40,  7, 22, 28, 23, 29, 12, 10, 21, 19],\n",
+       "       [26,  4, 13, 23, 14, 18,  8,  9, 13, 10],\n",
+       "       [10,  1,  2, 10,  8,  9,  6,  4,  8,  5],\n",
+       "       [51,  7, 21, 42, 31, 40, 20, 17, 31, 24],\n",
+       "       [ 8,  1,  4,  4,  5,  7,  3,  2,  5,  5],\n",
+       "       [11,  2,  5,  9,  6,  8,  3,  5,  5,  5],\n",
+       "       [ 7,  1,  4,  6,  4,  5,  3,  2,  4,  3]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "mat_np = np.array(mat)\n",
-    "mat_np.T"
+    "np.linalg.matrix_power(mat_np, 4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
