got the correct characters (almost there)

--- a/reps.ipynb
+++ b/reps.ipynb
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CT2\n",
+      "CT1\n",
       "\n",
       "     2  1  1\n",
       "\n",
@@ -90,7 +90,7 @@
        "<pc group of size 2 with 1 generator>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {
       "text/plain": ""
      },
@@ -102,7 +102,7 @@
        "CharacterTable( <pc group of size 2 with 1 generator> )"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {
       "text/plain": ""
      },
@@ -149,6 +149,15 @@
     "Z210 := DirectProduct(Z2, Z2, Z2, Z2, Z2, Z2, Z2, Z2, Z2, Z2);\n",
     "tbl3 := CharacterTable(Z210);\n",
     "# Display(tbl3);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Display(t)"
    ]
   },
   {
@@ -867,7 +876,7 @@
    "name": "gap",
    "nbconvert_exporter": "",
    "pygments_lexer": "gap",
-   "version": "4.12.2"
+   "version": "4.14.0"
   }
  },
  "nbformat": 4,
