--- a/manip.ipynb
+++ b/manip.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "# iso =\"[ F10*F8*F7*F6*F4*F2, F9*F8*F3*F2, F9*F8*F6*F2*F1, F8*F6*F2, F10*F7*F6*F5*F2,   F10*F9*F7*F6, F8, F8*F6, F10*F8*F7*F6, F9*F7*F6 ]\"\n",
-    "iso1 = \"[ f1*f3, f1*f4*f5, f1*f2*f3*f4, f1*f2*f4*f5, f1*f2*f3*f4*f5, f8, f6*f7,   f8*f9, f6*f8*f10, f6 ]\"\n",
-    "iso2 = \"[ f2*f4, f1*f2*f3, f4, f3*f4, f1*f2*f3*f5, f6, f6*f8, f9, f6*f7, f10 ]\"\n",
+    "iso1 = \"[ f1*f3*f4*f5, f2*f4*f5, f2*f3*f5, f1*f4, f2*f3*f4*f5, f9, f6*f7*f9, f8,       f6*f10, f6*f9 ]\"\n",
+    "iso2 = \" [ f1*f3*f4, f2*f4, f3*f4, f3, f3*f5, f10, f6*f8*f10, f6*f9, f7, f6*f10 ]\"\n",
     "# iso = \"[ F1, F2, F3, F4, F5, F6, F7, F8, F9, F10 ] -> [ F10*F9*F7*F6*F4*F1, F9*F4, F6*F4*F2, F10*F9*F8*F5*F4, F9*F8*F7*F4*F3,   F10*F9*F7*F6, F8*F7, F8*F6, F10*F9*F7, F9*F7*F6 ]\""
    ]
   },
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,25 +234,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+       "array([[1, 0, 0, 1, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 1, 0, 1, 0, 0, 0, 0, 0],\n",
        "       [1, 0, 1, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 1, 1, 1, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 1, 0, 1, 1, 0, 0, 0, 0, 0],\n",
+       "       [1, 1, 0, 1, 1, 0, 0, 0, 0, 0],\n",
+       "       [1, 1, 1, 0, 1, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 1, 0, 1, 1],\n",
        "       [0, 0, 0, 0, 0, 0, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 1, 0, 1, 1, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 1, 0, 0, 1],\n",
        "       [0, 0, 0, 0, 0, 0, 0, 0, 1, 0]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,28 +301,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 1 1 1 1 0 0 0 0 0]\n",
-      " [0 0 1 1 1 0 0 0 0 0]\n",
+      "[[1 0 0 1 0 0 0 0 0 0]\n",
+      " [0 1 1 0 1 0 0 0 0 0]\n",
       " [1 0 1 0 1 0 0 0 0 0]\n",
-      " [0 1 1 1 1 0 0 0 0 0]\n",
-      " [0 1 0 1 1 0 0 0 0 0]\n",
+      " [1 1 0 1 1 0 0 0 0 0]\n",
+      " [1 1 1 0 1 0 0 0 0 0]\n",
       " [0 0 0 0 0 0 1 0 1 1]\n",
       " [0 0 0 0 0 0 1 0 0 0]\n",
-      " [0 0 0 0 0 1 0 1 1 0]\n",
       " [0 0 0 0 0 0 0 1 0 0]\n",
+      " [0 0 0 0 0 1 1 0 0 1]\n",
       " [0 0 0 0 0 0 0 0 1 0]]\n"
      ]
     }
    ],
    "source": [
     "print(mat1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 0 0 0 0 0 0 0 0]\n",
+      " [1 0 1 1 1 0 0 0 0 0]\n",
+      " [1 1 1 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 1 1 0 1]\n",
+      " [0 0 0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 0 0 0 1 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 0 0]\n",
+      " [0 0 0 0 0 1 1 0 0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mat2)"
    ]
   },
   {
@@ -740,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.undefined.undefined"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
