--- a/Commutator.ipynb
+++ b/Commutator.ipynb
@@ -17,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -51,7 +55,7 @@
     "            sm := sm + (chi[i] / chi[1]);\n",
     "        od;\n",
     "        #Print(\"sum = \", sm,  \"\\n\");\n",
-    "        if sm = 0 then\n",
+    "        if sm <> 0 then\n",
     "            # Print(i, \"\\n\");\n",
     "            numCommutator := numCommutator + Size(classes[i]);\n",
     "        fi;\n",
@@ -73,14 +77,18 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Number of commutators = 105, order = 140, number of noncommutators = 35\n"
+      "Number of commutators = 35, order = 140, number of noncommutators = 105\n"
      ]
     },
     {
@@ -98,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "105"
+       "35"
       ]
      },
      "execution_count": 3,
@@ -127,16 +135,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of commutators is 20616 and the order of the group is 368640\n",
-      "The number of commutators is 3840 and the order of the group is 368640\n"
+      "The number of commutators is 348024 and the order of the group is 368640\n",
+      "The number of commutators is 364800 and the order of the group is 368640\n",
+      "The number of commutators is 367200 and the order of the group is 368640\n",
+      "The number of commutators is 347378 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 365908 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 347994 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 368639 and the order of the group is 368640\n",
+      "31: Found it!!!!\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 368639 and the order of the group is 368640\n",
+      "33: Found it!!!!\n",
+      "The number of commutators is 348159 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 347348 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 348067 and the order of the group is 368640\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "368640"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -146,11 +203,11 @@
     "for k in [1..NrPerfectGroups(n)] do\n",
     "    pg := PerfectGroup(n,k);\n",
     "    if CommutatorLength(pg) = 2 and Order(Center(pg)) mod 2 = 0 then\n",
-    "        chi := numComm(pg);\n",
+    "        comms := numComm(pg);\n",
     "        #Print(\"The value of the length for group \", n, \" is: \", CommutatorLength(pg),\" and its center is of order \", Order(Center(pg)),\"\\n\");\n",
-    "        Print(\"The number of commutators is \", chi, \" and the order of the group is \", n,\"\\n\");\n",
+    "        Print(\"The number of commutators is \", comms, \" and the order of the group is \", n,\"\\n\");\n",
     "        #Print(\"The number of commutators is \", Length(GeneratorsOfGroup(pg)), \" and the order of the group is \", n,\"\\n\");\n",
-    "        if n - chi = 1 then\n",
+    "        if n - comms = 1 then\n",
     "            Print(k, \": Found it!!!!\\n\");\n",
     "        fi;\n",
     "    fi;\n",
@@ -167,7 +224,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -277,7 +338,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -326,7 +391,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -375,7 +444,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -519,7 +592,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -541,7 +618,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -562,7 +643,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -584,7 +669,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -620,7 +709,11 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -689,7 +782,11 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -734,7 +831,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -776,7 +877,11 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -848,7 +953,11 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -870,7 +979,11 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -944,7 +1057,11 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -980,7 +1097,11 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1036,7 +1157,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1078,7 +1203,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1099,7 +1228,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1128,7 +1261,11 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1151,7 +1288,11 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1186,7 +1327,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1235,7 +1380,11 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1257,7 +1406,11 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1292,7 +1445,11 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1327,7 +1484,11 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1362,7 +1523,11 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1384,7 +1549,11 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1435,7 +1604,11 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1457,7 +1630,11 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1492,7 +1669,11 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1514,7 +1695,11 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1562,7 +1747,11 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1584,7 +1773,11 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1606,7 +1799,11 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1654,7 +1851,11 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1681,7 +1882,11 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1820,7 +2025,11 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1842,7 +2051,11 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1864,7 +2077,11 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1912,7 +2129,11 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1947,7 +2168,11 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1969,7 +2194,11 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1991,7 +2220,11 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2013,7 +2246,11 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2035,7 +2272,11 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2097,7 +2338,11 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2114,7 +2359,11 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2136,7 +2385,11 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2158,7 +2411,11 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2180,7 +2437,11 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2202,7 +2463,11 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2224,7 +2489,11 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2272,7 +2541,11 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2294,7 +2567,11 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2316,7 +2593,11 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2338,7 +2619,11 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "gap"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2368,7 +2653,7 @@
    "codemirror_mode": "gap",
    "file_extension": ".g",
    "mimetype": "text/x-gap",
-   "name": "gap",
+   "name": "GAP 4",
    "nbconvert_exporter": "",
    "pygments_lexer": "gap",
    "version": "4.14.0"
