fix: add cell output

--- a/Commutator.ipynb
+++ b/Commutator.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
        "function( G ) ... end"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {
       "text/plain": ""
      },
@@ -51,7 +51,7 @@
     "            sm := sm + (chi[i] / chi[1]);\n",
     "        od;\n",
     "        #Print(\"sum = \", sm,  \"\\n\");\n",
-    "        if sm = 0 then\n",
+    "        if sm <> 0 then\n",
     "            # Print(i, \"\\n\");\n",
     "            numCommutator := numCommutator + Size(classes[i]);\n",
     "        fi;\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Number of commutators = 105, order = 140, number of noncommutators = 35\n"
+      "Number of commutators = 35, order = 140, number of noncommutators = 105\n"
      ]
     },
     {
@@ -89,7 +89,7 @@
        "<pc group of size 140 with 4 generators>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {
       "text/plain": ""
      },
@@ -98,10 +98,10 @@
     {
      "data": {
       "text/plain": [
-       "105"
+       "35"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {
       "text/plain": ""
      },
@@ -127,16 +127,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of commutators is 20616 and the order of the group is 368640\n",
-      "The number of commutators is 3840 and the order of the group is 368640\n"
+      "The number of commutators is 348024 and the order of the group is 368640\n",
+      "The number of commutators is 364800 and the order of the group is 368640\n",
+      "The number of commutators is 367200 and the order of the group is 368640\n",
+      "The number of commutators is 347378 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 367348 and the order of the group is 368640\n",
+      "The number of commutators is 365908 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 347994 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 368639 and the order of the group is 368640\n",
+      "31: Found it!!!!\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 368639 and the order of the group is 368640\n",
+      "33: Found it!!!!\n",
+      "The number of commutators is 348159 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 347348 and the order of the group is 368640\n",
+      "The number of commutators is 348144 and the order of the group is 368640\n",
+      "The number of commutators is 348067 and the order of the group is 368640\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "368640"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {
+      "text/plain": ""
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
